<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp368"
    android:layout_marginStart="@dimen/dp16"
    android:layout_marginEnd="@dimen/dp16"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_Congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp30"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/congratulations"
        android:textColor="@color/black"
        android:textSize="@dimen/sp30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/dp16"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/congratulations_description"
        android:textColor="@color/black"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Congratulations" />

    <EditText
        android:id="@+id/et_Code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:layout_marginStart="@dimen/dp40"
        android:layout_marginTop="@dimen/dp24"
        android:layout_marginEnd="@dimen/dp40"
        android:background="@drawable/bg_edtext"
        android:fontFamily="@font/inter_bold"
        android:hint="@string/sms_code"
        android:paddingLeft="@dimen/dp16"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Description" />

    <Button
        android:id="@+id/btn_Proceed"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp54"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp36"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/inter_bold"
        android:letterSpacing="0.02"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_Code" />

    <TextView
        android:id="@+id/tv_UnreceivedCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:fontFamily="@font/inter_bold"
        android:text="@string/unreceived_code"
        android:textColor="@color/yellow"
        android:textSize="@dimen/sp18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Proceed" />

</androidx.constraintlayout.widget.ConstraintLayout>