<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.authorization.AuthorizationActivity">

    <TextView
        android:id="@+id/tv_Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp30"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="@dimen/sp30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp40"
        android:gravity="center"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Registration" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp40"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/bg_edtext"
        android:fontFamily="@font/inter_bold"
        android:inputType="number"
        android:hint="@string/phone_number"
        android:paddingLeft="@dimen/dp16"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Description" />

    <Button
        android:id="@+id/btn_Registration"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp54"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp36"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/inter_bold"
        android:letterSpacing="0.02"
        android:text="@string/further"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_PhoneNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>